--- a/News(oc)/News(oc)/CustomBarView.xib
+++ b/News(oc)/News(oc)/CustomBarView.xib
@@ -12,22 +12,29 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomBarView">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="nSc-xN-eRa">
-                    <rect key="frame" x="0.0" y="0.0" width="550" height="44"/>
+                <searchBar contentMode="redraw" placeholder="搜索" translatesAutoresizingMaskIntoConstraints="NO" id="nSc-xN-eRa">
+                    <rect key="frame" x="0.0" y="0.0" width="325" height="44"/>
+                    <color key="barTintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                     <textInputTraits key="textInputTraits"/>
+                    <scopeButtonTitles>
+                        <string>Title</string>
+                        <string>Title</string>
+                    </scopeButtonTitles>
                 </searchBar>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Frg-DY-RlY">
-                    <rect key="frame" x="550" y="0.0" width="50" height="44"/>
+                    <rect key="frame" x="325" y="0.0" width="50" height="44"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="qQH-zD-slk"/>
                     </constraints>
-                    <state key="normal" title="取消"/>
+                    <state key="normal" title="取消">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="Frg-DY-RlY" firstAttribute="leading" secondItem="nSc-xN-eRa" secondAttribute="trailing" id="BmA-zX-tGT"/>
                 <constraint firstAttribute="bottom" secondItem="Frg-DY-RlY" secondAttribute="bottom" id="Gqd-rn-pc4"/>
@@ -38,6 +45,10 @@
                 <constraint firstItem="nSc-xN-eRa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="zh2-gk-dyr"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="cancelButton" destination="Frg-DY-RlY" id="Yfa-es-l4F"/>
+                <outlet property="searchBar" destination="nSc-xN-eRa" id="rdb-47-pip"/>
+            </connections>
             <point key="canvasLocation" x="262" y="242"/>
         </view>
     </objects>
